kube/database/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: climeatdb-ingress
  labels:
    name: climeatdb-ingress
spec:
  rules:
    - host: climeat-db.safemoon.joshcorp.co
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: climeatdb
                port:
                  number: 5432
